--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="best_deals">Best Deals</string>
     <string name="menu_menu">Categories</string>
     <string name="menu_food_list">Food List</string>
+    <string name="menu_food_detail">Food Detail</string>
 </resources>
