--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="size">Size</string>
     <string name= "add_on">Addon</string>
     <string name="menu_cart">Cart</string>
+    <string name= "action_clear_cart">Clear Cart</string>
 </resources>
