--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AndroidEatIt</string>
-    <string name="Logo_name">Eat It</string>
+    <string name="Logo_name">FasterChef</string>
     <string name="s_logan">Be Foody</string>
     <string name="sign_up">Sign Up</string>
     <string name="sign_in">Sign In</string>
